--- a/SimpleEngine/SimpleEngine.vcxproj.filters
+++ b/SimpleEngine/SimpleEngine.vcxproj.filters
@@ -1,14 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -16,11 +8,18 @@
     <Filter Include="Engine">
       <UniqueIdentifier>{32f118ce-134b-476e-b59e-71a9dfcf4693}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\RenderPasses">
+    <Filter Include="Engine\Graphics">
+      <UniqueIdentifier>{4f56e44d-8a0a-421c-b83e-79ce43f25883}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Graphics\Glew">
+      <UniqueIdentifier>{eb219a0c-dbb1-48d1-9e23-91533b3f1ddf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Graphics\RenderPasses">
       <UniqueIdentifier>{5de49a8a-25c1-45a1-a4c0-e8421e9ac226}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Glew">
-      <UniqueIdentifier>{eb219a0c-dbb1-48d1-9e23-91533b3f1ddf}</UniqueIdentifier>
+    <Filter Include="Misc">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -28,19 +27,19 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
+      <Filter>Misc</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
+      <Filter>Misc</Filter>
     </ClInclude>
     <ClInclude Include="Include\DebugRenderPass.h">
-      <Filter>Engine\RenderPasses</Filter>
+      <Filter>Engine\Graphics\RenderPasses</Filter>
     </ClInclude>
     <ClInclude Include="Include\RenderPass.h">
-      <Filter>Engine\RenderPasses</Filter>
+      <Filter>Engine\Graphics\RenderPasses</Filter>
     </ClInclude>
     <ClInclude Include="Include\SimpleObjectsRenderPass.h">
-      <Filter>Engine\RenderPasses</Filter>
+      <Filter>Engine\Graphics\RenderPasses</Filter>
     </ClInclude>
     <ClInclude Include="Include\SimpleDebug.h">
       <Filter>Engine</Filter>
@@ -60,22 +59,19 @@
     <ClInclude Include="Include\SimpleGameMode.h">
       <Filter>Engine</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Misc</Filter>
+    </ClInclude>
     <ClInclude Include="Include\SimpleCamera2D.h">
-      <Filter>Engine</Filter>
+      <Filter>Engine\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="Include\SimpleShaderProgram.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
+      <Filter>Engine\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\SimpleObjectsRenderPass.cpp">
-      <Filter>Engine\RenderPasses</Filter>
+      <Filter>Engine\Graphics\RenderPasses</Filter>
     </ClCompile>
     <ClCompile Include="Src\SimpleEngine.cpp">
       <Filter>Engine</Filter>
@@ -89,14 +85,17 @@
     <ClCompile Include="Src\SimpleScene.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="External\glew\glew.cpp">
+      <Filter>Engine\Graphics\Glew</Filter>
+    </ClCompile>
     <ClCompile Include="Src\SimpleCamera2D.cpp">
-      <Filter>Engine</Filter>
+      <Filter>Engine\Graphics</Filter>
     </ClCompile>
     <ClCompile Include="Src\SimpleShaderProgram.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Engine\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="External\glew\glew.cpp">
-      <Filter>Engine\Glew</Filter>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Misc</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
