--- a/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClInclude Include="SimpleEngineViewerControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LineControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CoordinatesControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SimpleEngineControls.cpp">
@@ -39,6 +48,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SimpleEngineViewerControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CoordinatesControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LineControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
