--- a/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="BaseControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DrawingAppLogic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SimpleEngineControls.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LineControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawingAppLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
