--- a/SimpleEngine/SimpleEngine.vcxproj
+++ b/SimpleEngine/SimpleEngine.vcxproj
@@ -134,6 +134,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\SimpleLayer.h" />
+    <ClInclude Include="Include\LowerZIndex.h" />
     <ClInclude Include="SimpleTexture.h" />
     <ClInclude Include="Include\DebugGameLogic.h" />
     <ClInclude Include="Include\DebugRenderPass.h" />
@@ -159,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="External\glew\glew.cpp" />
+    <ClCompile Include="Src\SimpleLayer.cpp" />
     <ClCompile Include="Src\DebugGameLogic.cpp" />
     <ClCompile Include="SimpleTexture.cpp" />
     <ClCompile Include="Src\SimpleCamera2D.cpp" />
