--- a/SimpleEngine/SimpleEngine.vcxproj.filters
+++ b/SimpleEngine/SimpleEngine.vcxproj.filters
@@ -27,6 +27,9 @@
     <Filter Include="Engine\Debug">
       <UniqueIdentifier>{0b6e59e0-63aa-493a-85aa-2d504f53576d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Utils">
+      <UniqueIdentifier>{72ba70d2-9f49-4318-9cbb-3a7d86191557}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -92,9 +95,6 @@
     <ClInclude Include="Include\DebugGameLogic.h">
       <Filter>Engine\Debug</Filter>
     </ClInclude>
-    <ClInclude Include="Include\SimpleSprite.h">
-      <Filter>Engine\Graphics</Filter>
-    </ClInclude>
     <ClInclude Include="Include\SimpleTexture.h">
       <Filter>Engine\Graphics</Filter>
     </ClInclude>
@@ -106,6 +106,12 @@
     </ClInclude>
     <ClInclude Include="Include\LowerZIndex.h">
       <Filter>Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\SimpleUtils.h">
+      <Filter>Engine\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\SimpleSpriteRenderer.h">
+      <Filter>Engine\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -145,9 +151,6 @@
     <ClCompile Include="Src\DebugGameLogic.cpp">
       <Filter>Engine\Debug</Filter>
     </ClCompile>
-    <ClCompile Include="Src\SimpleSprite.cpp">
-      <Filter>Engine\Debug</Filter>
-    </ClCompile>
     <ClCompile Include="Include\SimpleMesh.h">
       <Filter>Engine\Graphics</Filter>
     </ClCompile>
@@ -160,12 +163,21 @@
     <ClCompile Include="Src\SimpleLayer.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Src\SimpleSpriteRenderer.cpp">
+      <Filter>Engine\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Src\shaders\SimpleColorShader.frag">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="Src\shaders\SimpleColorShader.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Src\shaders\SimpleSpriteShader.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Src\shaders\SimpleSpriteShader.vert">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
