--- a/SimpleEngineControls/SimpleEngineControls.vcxproj
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj
@@ -138,23 +138,19 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BaseControl.h" />
-    <ClInclude Include="CoordinatesControl.h" />
     <ClInclude Include="DrawingAppLogic.h" />
-    <ClInclude Include="LineControl.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SimpleEngineControls.h" />
     <ClInclude Include="SimpleEngineViewerControl.h" />
+    <ClInclude Include="SpriteControl.h" />
     <ClInclude Include="Stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="BaseControl.cpp" />
-    <ClCompile Include="CoordinatesControl.cpp" />
     <ClCompile Include="DrawingAppLogic.cpp" />
-    <ClCompile Include="LineControl.cpp" />
     <ClCompile Include="SimpleEngineControls.cpp" />
     <ClCompile Include="SimpleEngineViewerControl.cpp" />
+    <ClCompile Include="SpriteControl.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
