--- a/SimpleEngine/SimpleEngine.vcxproj.filters
+++ b/SimpleEngine/SimpleEngine.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClInclude Include="Include\SimpleInput.h">
       <Filter>Engine\Input</Filter>
     </ClInclude>
+    <ClInclude Include="Include\SimpleAABB.h">
+      <Filter>Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\SimpleObjectsRenderPass.cpp">
@@ -174,6 +177,9 @@
     </ClCompile>
     <ClCompile Include="Src\SimpleInput.cpp">
       <Filter>Engine\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\SimpleAABB.cpp">
+      <Filter>Engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
