--- a/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
@@ -27,10 +27,10 @@
     <ClInclude Include="SimpleEngineViewerControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="DrawingAppLogic.h">
+    <ClInclude Include="SpriteControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SpriteControl.h">
+    <ClInclude Include="TileEditorApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -47,10 +47,10 @@
     <ClCompile Include="SimpleEngineViewerControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="DrawingAppLogic.cpp">
+    <ClCompile Include="SpriteControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SpriteControl.cpp">
+    <ClCompile Include="TileEditorApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
